--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 <body class="antialiased p-4 md:p-8">
 
     <div class="max-w-6xl mx-auto">
-        <!-- Header / Logo - UPDATED IMAGE -->
+        <!-- Header / Logo - UPDATED IMAGE SOURCE -->
         <header class="text-center mb-10 p-6 rounded-xl bg-white shadow-lg">
             <h1 class="text-5xl font-extrabold text-primary tracking-tight">
-                <!-- Image for the logo. The onerror provides a placeholder if the image file is missing. -->
-                <img src="PearRepublic.png" 
+                <!-- Image source changed to the new file: unnamed.png -->
+                <img src="unnamed.png" 
                      alt="Pear Republic Logo" 
                      class="h-12 w-auto inline-block align-middle mr-3" 
-                     onerror="this.onerror=null; this.src='https://placehold.co/100x48/10B981/ffffff?text=Pear'"> 
+                     onerror="this.onerror=null; this.src='https://placehold.co/100x48/10B981/ffffff?text=Logo'"> 
                 Pear Republic
             </h1>
             <p class="mt-2 text-xl text-gray-500">Configure the perfect computer for your video workflow.</p>
@@ -99,7 +99,8 @@
                             <p id="total-price-display" class="text-5xl font-extrabold text-accent mt-1">
                                 €0
                             </p>
-                            <p class="text-sm text-gray-500 mt-1">Taxes and shipping not included.</p>
+                            <!-- TEXT CHANGED HERE -->
+                            <p class="text-sm text-gray-500 mt-1">Shipping not included.</p>
                         </div>
                         
                         <button id="buy-button" 
@@ -134,24 +135,24 @@
         // --- COMPONENT AND BASE MODEL DATA ---
         const componentsData = {
             'CPU': [
-                { name: "Intel Core i7-14700K (Ideal 4K)", price: 400 },
-                { name: "Intel Core i9-14900K (Maximum 8K)", price: 650 },
-                { name: "AMD Ryzen 9 7950X", price: 550 }
+                { name: "AMD Ryzen 5 7600", price: 200 },
+                { name: "AMD Ryzen 7 7700X ", price: 500 },
+                { name: "AMD Ryzen 9 7950X", price: 700 }
             ],
             'GPU': [
-                { name: "NVIDIA GeForce RTX 4070 (12GB)", price: 600 },
-                { name: "NVIDIA GeForce RTX 4080 (16GB)", price: 1100 },
-                { name: "NVIDIA GeForce RTX 4090 (24GB)", price: 1700 }
+                { name: "NVIDIA GeForce RTX 5060", price: 500 },
+                { name: "NVIDIA GeForce RTX 5070", price: 700 },
+                { name: "NVIDIA GeForce RTX 5090", price: 3400 }
             ],
             'RAM': [
-                { name: "32GB DDR5 5600MHz", price: 120 },
-                { name: "64GB DDR5 6000MHz", price: 250 },
-                { name: "128GB DDR5 6000MHz", price: 500 }
+                { name: "32GB DDR5", price: 400 },
+                { name: "64GB DDR5", price: 500 },
+                { name: "128GB DDR5", price: 1200 }
             ],
             'SSD': [
-                { name: "1TB NVMe Gen4", price: 80 },
-                { name: "2TB NVMe Gen4", price: 150 },
-                { name: "4TB NVMe Gen4", price: 300 }
+                { name: "500GB NVMe Gen4", price: 90 },
+                { name: "1TB NVMe Gen4", price: 120 },
+                { name: "4TB NVMe Gen4", price: 260 }
             ],
             'PSU': [
                 { name: "850W Gold Modular", price: 100 },
@@ -162,28 +163,28 @@
         const baseModelsData = {
             'video_editor': {
                 id: 'video_editor',
-                name: "Editor Pro (4K)",
+                name: "Editor Standard",
                 basePrice: 1500,
-                description: "Optimized configuration for 4K editing and graphic design. Great balance between cost and performance.",
+                description: "Optimized configuration for 4K editing. Great balance between cost and performance. Highly customizable",
                 defaultComponents: {
-                    CPU: "Intel Core i7-14700K (Ideal 4K)",
-                    GPU: "NVIDIA GeForce RTX 4070 (12GB)",
-                    RAM: "32GB DDR5 5600MHz",
+                    CPU: "AMD Ryzen 5 7600",
+                    GPU: "NVIDIA GeForce RTX 5060",
+                    RAM: "32GB DDR5",
                     SSD: "1TB NVMe Gen4",
                     PSU: "850W Gold Modular"
                 }
             },
             'color_grader': {
                 id: 'color_grader',
-                name: "Color Master (8K)",
+                name: "Master Editor",
                 basePrice: 2200,
-                description: "Maximum performance for color correction, VFX, and 8K rendering. No compromises on power.",
+                description: "Premium at 8k editing and live-streaming. Two graphic cards. Highly customizable.",
                 defaultComponents: {
-                    CPU: "Intel Core i9-14900K (Maximum 8K)",
-                    GPU: "NVIDIA GeForce RTX 4080 (16GB)",
-                    RAM: "64GB DDR5 6000MHz",
-                    SSD: "2TB NVMe Gen4",
-                    PSU: "1000W Platinum Modular"
+                    CPU: "AMD Ryzen 5 7600",
+                    GPU: "NVIDIA GeForce RTX 5060",
+                    RAM: "32GB DDR5",
+                    SSD: "1TB NVMe Gen4",
+                    PSU: "850W Gold Modular"
                 }
             }
         };
