Update logo and card layout in index.html

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
         <div class="max-w-6xl mx-auto flex justify-between items-center">
             <!-- Logo/Brand Section -->
             <div class="flex items-center">
-                <!-- LOGO ACTUALIZADO CON LA IMAGEN PROPORCIONADA: editor-videos.jpg -->
-                <img src="editor-videos.jpg" 
+                <!-- LOGO ACTUALIZADO CON LA NUEVA IMAGEN PROPORCIONADA: PEARRepublicNegro.png -->
+                <img src="PEARRepublicNegro.png" 
                      alt="Pear Republic Logo" 
-                     class="h-10 w-auto rounded-full object-cover" 
+                     class="h-10 w-auto rounded-lg object-contain bg-gray-900 p-1" 
                      onerror="this.onerror=null; this.src='https://placehold.co/100x40/10B981/ffffff?text=Logo'"> 
                 <span class="text-2xl font-extrabold text-primary ml-2">Pear Republic</span>
             </div>
@@ -236,7 +236,7 @@
                     Here are the essential professional tools optimized for your Pear Republic workstation.
                 </p>
 
-                <div class="grid md:grid-cols-2 gap-6">
+                <div class="grid md:grid-cols-3 gap-6">
                     
                     <!-- Card 1: Adobe Creative Cloud Pro -->
                     <div class="p-6 bg-gray-50 rounded-lg border border-gray-200 shadow-md">
@@ -267,6 +267,25 @@
                         <!-- CLASE MANTENIDA: bg-emerald-500 | hover:bg-emerald-600 -->
                         <a href="https://www.dropbox.com/plans" target="_blank" class="mt-4 inline-block bg-emerald-500 text-white font-semibold py-2 px-4 rounded-full hover:bg-emerald-600 transition duration-150 text-sm">
                             Explore Storage Plans
+                        </a>
+                    </div>
+
+                    <!-- Card 3: Windows 11 Pro (TARJETA ACTUALIZADA) -->
+                    <div class="p-6 bg-gray-50 rounded-lg border border-gray-200 shadow-md">
+                        <!-- IMAGEN DE WINDOWS 11 PRO (Insertada) -->
+                        <img src="PT_RGB_Windows11_Pro_EN_375x375.avif" 
+                             alt="Windows 11 Pro Logo" 
+                             class="w-full h-auto rounded-lg mb-4 object-cover" 
+                             onerror="this.onerror=null; this.src='https://placehold.co/400x150/0078D4/ffffff?text=Windows+11+Pro'"> 
+
+                        <h3 class="text-2xl font-bold text-primary">Windows 11 Pro</h3>
+                        <!-- DESCRIPCIÓN SIN EL PRECIO -->
+                        <p class="text-gray-700 mt-2">
+                            The professional operating system offering advanced features, superior security, and exceptional stability, ideal for managing large files and intensive multitasking in video editing environments.
+                        </p>
+                        <!-- BOTÓN CON EL ENLACE EXACTO SOLICITADO Y ESTILO SIMILAR A DROPBOX -->
+                        <a href="https://www.microsoft.com/es-es/d/windows-11-pro/dg7gmgf0d8h4" target="_blank" class="mt-4 inline-block bg-emerald-500 text-white font-semibold py-2 px-4 rounded-full hover:bg-emerald-600 transition duration-150 text-sm">
+                            View License Options
                         </a>
                     </div>
 
