Update logo and carousel images in index.html
Updated logo images and added new USB images to the carousel.

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
         <div class="max-w-6xl mx-auto flex justify-between items-center">
             <!-- Logo/Brand Section -->
             <div class="flex items-center">
-                <!-- LOGO ACTUALIZADO CON LA NUEVA IMAGEN PROPORCIONADA: PEARRepublicNegro.png -->
-                <img src="PEARRepublicNegro.png" 
+                <!-- LOGO RESTAURADO AL ARCHIVO ORIGINAL "pear-logo.jpg" Y CON rounded-full -->
+                <img src="pear-logo.jpg" 
                      alt="Pear Republic Logo" 
-                     class="h-10 w-auto rounded-lg object-contain bg-gray-900 p-1" 
+                     class="h-10 w-auto rounded-full object-contain bg-gray-900 p-1" 
                      onerror="this.onerror=null; this.src='https://placehold.co/100x40/10B981/ffffff?text=Logo'"> 
                 <span class="text-2xl font-extrabold text-primary ml-2">Pear Republic</span>
             </div>
@@ -506,24 +506,26 @@
                             <div class="relative overflow-hidden rounded-lg mb-4 h-48 bg-gray-200">
                                 <!-- Contenedor de las imágenes. La clase 'flex' y 'min-w-full' son clave para el desplazamiento horizontal. -->
                                 <div id="usb-carousel" class="flex h-full">
-                                    <!-- IMAGEN 1: USB Negro (proporcionada) -->
+                                    <!-- IMAGEN 1: USB Negro (Actualizada: Screenshot 2025-11-28 08.45.52.png) -->
                                     <img src="Screenshot 2025-11-28 08.45.52.png" 
                                          alt="Pear Republic USB (Black) 1" 
                                          class="min-w-full h-full object-contain"
                                          onerror="this.onerror=null; this.src='https://placehold.co/220x192/1F2937/ffffff?text=USB+1'">
-                                    <!-- IMAGEN 2: USB Blanco (proporcionada) -->
+                                    <!-- IMAGEN 2: USB Blanco (Actualizada: Screenshot 2025-11-28 08.46.08.png) -->
                                     <img src="Screenshot 2025-11-28 08.46.08.png" 
                                          alt="Pear Republic USB (White) 2" 
                                          class="min-w-full h-full object-contain"
                                          onerror="this.onerror=null; this.src='https://placehold.co/220x192/1F2937/ffffff?text=USB+2'">
-                                    <!-- Placeholder 3 (simulación de tercera imagen) -->
-                                    <img src="https://placehold.co/220x192/4F46E5/ffffff?text=USB+Design+3" 
-                                         alt="Pear Republic USB (Placeholder 3)" 
-                                         class="min-w-full h-full object-contain">
-                                    <!-- Placeholder 4 (simulación de cuarta imagen) -->
-                                    <img src="https://placehold.co/220x192/10B981/ffffff?text=USB+Design+4" 
-                                         alt="Pear Republic USB (Placeholder 4)" 
-                                         class="min-w-full h-full object-contain">
+                                    <!-- IMAGEN 3: USB Azul (Añadida: Screenshot 2025-11-28 08.46.16.png) -->
+                                    <img src="Screenshot 2025-11-28 08.46.16.png" 
+                                         alt="Pear Republic USB (Blue) 3" 
+                                         class="min-w-full h-full object-contain"
+                                         onerror="this.onerror=null; this.src='https://placehold.co/220x192/4F46E5/ffffff?text=USB+3'">
+                                    <!-- IMAGEN 4: USB Rojo (Añadida: Screenshot 2025-11-28 08.46.23.png) -->
+                                    <img src="Screenshot 2025-11-28 08.46.23.png" 
+                                         alt="Pear Republic USB (Red) 4" 
+                                         class="min-w-full h-full object-contain"
+                                         onerror="this.onerror=null; this.src='https://placehold.co/220x192/10B981/ffffff?text=USB+4'">
                                 </div>
                                 <!-- Botón de Navegación Izquierda -->
                                 <button onclick="changeSlide('usb-carousel', -1)" 
