Update logo image source in index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+     <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -73,11 +73,11 @@
         <div class="max-w-6xl mx-auto flex justify-between items-center">
             <!-- Logo/Brand Section -->
             <div class="flex items-center">
-                <!-- LOGO ACTUALIZADO A "logo.png" SEGÚN SOLICITUD DEL USUARIO -->
-                <img src="logo.png" 
+                <!-- LOGO ACTUALIZADO A "unnamed.png" SEGÚN SOLICITUD DEL USUARIO -->
+                <img src="unnamed.png" 
                      alt="Pear Republic Logo" 
                      class="h-10 w-auto object-contain" 
-                     onerror="this.onerror=null; this.src='https://placehold.co/100x40/10B981/ffffff?text=Logo+Nuevo'"> 
+                     onerror="this.onerror=null; this.src='https://placehold.co/100x40/10B981/ffffff?text=Nuevo+Logo'"> 
                 <span class="text-2xl font-extrabold text-primary ml-2">Pear Republic</span>
             </div>
 
